@@ -8,19 +8,19 @@ if __name__ == "__main__":
     cache = apt.Cache(progress)
     print cache
     for pkg in cache:
-        if pkg.isUpgradable:
-            pkg.markInstall()
-    for pkg in cache.getChanges():
-        #print pkg.Name()
+        if pkg.is_upgradable:
+            pkg.mark_install()
+    for pkg in cache.get_changes():
+        #print pkg.name()
         pass
-    print "Broken: %s " % cache._depcache.BrokenCount
-    print "InstCount: %s " % cache._depcache.InstCount
+    print "Broken: %s " % cache._depcache.broken_count
+    print "inst_count: %s " % cache._depcache.inst_count
 
     # get a new cache
     cache = apt.Cache(progress)
     for name in cache.keys():
         import random
         if random.randint(0, 1) == 1:
-            cache[name].markDelete()
-    print "Broken: %s " % cache._depcache.BrokenCount
-    print "DelCount: %s " % cache._depcache.DelCount
+            cache[name].mark_delete()
+    print "Broken: %s " % cache._depcache.broken_count
+    print "del_count: %s " % cache._depcache.del_count
