@@ -14,27 +14,27 @@ if __name__ == "__main__":
     apt_pkg.init()
 
     # system-lock
-    apt_pkg.PkgSystemLock()
+    apt_pkg.pkgsystem_lock()
 
     pid = os.fork()
     if pid == 0:
         try:
-            apt_pkg.PkgSystemLock()
+            apt_pkg.pkgsystem_lock()
         except SystemError as s:
             print "Can't get lock: (error text:\n%s)" % s
         sys.exit(0)
 
-    apt_pkg.PkgSystemUnLock()
+    apt_pkg.pkgsystem_unlock()
 
     # low-level lock
-    fd = apt_pkg.GetLock(lock, True)
+    fd = apt_pkg.get_lock(lock, True)
     print "Lockfile fd: %s" % fd
 
     # try to get lock without error flag
     pid = os.fork()
     if pid == 0:
         # child
-        fd = apt_pkg.GetLock(lock, False)
+        fd = apt_pkg.get_lock(lock, False)
         print "Lockfile fd (child): %s" % fd
         sys.exit(0)
 
@@ -42,6 +42,6 @@ if __name__ == "__main__":
     pid = os.fork()
     if pid == 0:
         # child
-        fd = apt_pkg.GetLock(lock, True)
+        fd = apt_pkg.get_lock(lock, True)
         print "Lockfile fd (child): %s" % fd
         sys.exit(0)
