@@ -41,13 +41,13 @@ print "refcount after second cache.update(): ", sys.gettotalrefcount()
 # test install()
 c.open(apt.progress.OpProgress())
 gc.collect()
-print "refcount before cache['hello'].markInstall(): ", sys.gettotalrefcount()
-c["hello"].markInstall()
+print "refcount before cache['hello'].mark_install(): ", sys.gettotalrefcount()
+c["hello"].mark_install()
 c.commit(apt.progress.FetchProgress(), apt.progress.InstallProgress())
 gc.collect()
 print "refcount after: ", sys.gettotalrefcount()
 c.open(apt.progress.OpProgress())
-c["hello"].markDelete()
+c["hello"].mark_delete()
 c.commit(apt.progress.FetchProgress(), apt.progress.InstallProgress())
 gc.collect()
 print "refcount after: ", sys.gettotalrefcount()
