@@ -30,6 +30,8 @@ python-apt (0.9.0) UNRELEASED; urgency=low
     - Use apt_inst.DebFile (Closes: #671784)
   * doc/examples/*.py:
     - Update examples to the new API (Closes: #639022)
+  * tests/old/*.py:
+    - Update to new API as well
 
   [ Jeremy Bicha ]
   * data/templates/Ubuntu.info.in: add 'devel' series (Closes: #722961)
